Add files favicon.ico and robots.txt. Modified files index.html and resume.html - add string from link favicon.ico.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Портфолио</title>
 	<meta name="description" content="Портфолио HTML/CSS верстальщика. Примеры выполненных работ.">
 	<meta name="author" content="humans.txt">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 
 	<!--[if lt IE 9]>
