--- a/resume.html
+++ b/resume.html
@@ -7,6 +7,7 @@
 	<title>Резюме</title>
 	<meta name="description" content="Портфолио HTML/CSS верстальщика. Резюме - образование, опыт работы и ключевые навыки.">
 	<meta name="author" content="humans.txt">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 
 	<!--[if lt IE 9]>
