--- a/resume.html
+++ b/resume.html
@@ -36,7 +36,7 @@
 			<aside>
 				<div class="aside-block">
 					<h3><i class="fa fa-user"></i>О себе</h3>
-					<p>В своих работах использую семантические элементы HTML5. При создании стилей CSS пользуюсь Less препроцессором. Стараюсь обеспечить корректное отображение страниц и элементов в IE8+. В состоянии написать постой скрипт на JQuery или создать несложную анимацию на CSS3. Также в своих работах применял Bootstrap 3, знаком с сеткой и элементами.</p>
+					<p>В своих работах использую семантические элементы HTML5. При создании стилей CSS пользуюсь Less препроцессором. Стараюсь обеспечить корректное отображение страниц и элементов в IE8+. В состоянии написать простой скрипт на JQuery или создать несложную анимацию на CSS3. Также в своих работах применял Bootstrap 3, знаком с сеткой и элементами.</p>
 					<p>В дизайне макетов люблю минимализм. В свободное время читаю техническую литературу по web-технологиям и осваиваю новые техники.</p>
 				</div>
 				<div class="aside-block">
