--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<ul>
 						<li class="active"><a href="index.html">Портфолио</a></li>
 						<li><a href="resume.html">Резюме</a></li>
-						<li><a href="cv.html" class="disabled">Cover Letter</a></li>
+						<li><a href="#" class="disabled">Cover Letter</a></li>
 					</ul>
 				</nav>
 			</header>
