--- a/about.html
+++ b/about.html
@@ -8,5 +8,6 @@ title: О сайте
     <h1>{{ page.title }}</h1>
 </div>
 <div class="content">
-	<p>lkblog - это один из многих сайтов - записных книжек, где собираются интересные и не очень статьи и решения на HTML, CSS, JS.</p>
+	<p>lkblog - записная книжка одного HTML/CSS кодера.</p>
+	<p>Небольшие статьи и решения по верстке сайтов.</p>
 </div>
