--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 	</div>
 	<div class="footer">
 		<div class="row">
-			<div class="col-xs-12 text-right">
+			<div class="col-xs-12 text-left">
 				<p class="data">{{ post.date | date: "%d %B %Y" }}</p>
 			</div>
 		</div>
