--- a/404.html
+++ b/404.html
@@ -1,25 +1,17 @@
 ---
-layout: default
+layout: index
 permalink: /404.html
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<section class="error txt-xs-center">
+    <div class="error__header">
+        404
+    </div>
+    <div class="error__caption">
+        Page not found :( <br>
+        The requested page could not be found.
+    </div>
+    <div class="error__back">
+        Please, back to the <a href="/">homepage</a>.
+    </div>
+</section>
