small fix for project

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@ title: Portfolio
                 <a class="project-item__link" href="{{ project.link }}" rel="nofollow" target="_blank">Visit website</a>
             </div>
             <div class="project-item__thumbnail">
-                <img class="project-item__img" src="{{ project.thumbnail }}" alt="Project name">
+                <img class="project-item__img" src="{{ project.thumbnail }}" alt="{{ project.title }}">
             </div>
             <div class="project-item__caption">
                 {{ project.content }}
