--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
         {{ post.date | date: "%d %B %Y" }}
     </div>
     <div class="article__header">
-        <h2 class="h2"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }} <i class="fa fa-link" aria-hidden="true"></i></a></h2>
+        <h2 class="h2"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }} <i class="fas fa-link" aria-hidden="true"></i></a></h2>
     </div>
 </div>
 {% endfor %}
