--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@ layout: default
 title: Curriculum Vitae
 ---
 
-<h1 class="cv-title">Резюме</h1>
+<h1 class="title_cv">Резюме</h1>
 
 {% include cv/resume.html %}
 
