--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
     <meta name="yandex-verification" content="20abe9faaab967a1" />
     <meta name="google-site-verification" content="Vp7xYEg1BC7TF1ZEtp-xtgjkRdniJ4BGxYmNB2ewcMI" />
 
     <title>deeppines</title>
-    <meta name="description" content="Soon...">
+    <meta name="description" content="Soon..." />
 
-    <link rel="canonical" href="https://deeppines.github.io/">
-</head>
+    <link rel="canonical" href="https://deeppines.github.io/" />
+  </head>
 
-<body id="app">
+  <body id="app">
     <script type="module" src="/src/main.ts"></script>
-</body>
-
+  </body>
 </html>
