--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!doctype html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<head>
+  <meta charset="utf-8" type="text/html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="yandex-verification" content="20abe9faaab967a1" />
-    <meta name="google-site-verification" content="Vp7xYEg1BC7TF1ZEtp-xtgjkRdniJ4BGxYmNB2ewcMI" />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>deeppines</title>
-    <meta name="description" content="Soon..." />
+  <title>deeppines</title>
+  <meta name="description" content="Soon..." />
 
-    <link rel="canonical" href="https://deeppines.github.io/" />
-  </head>
+  <link rel="canonical" href="https://deeppines.github.io/" />
+</head>
 
-  <body id="app">
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<body id="app">
+  <script type="module" src="/src/main.ts"></script>
+</body>
+
 </html>
