feat: dark theme

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru">
+<html lang="ru" data-theme="light">
   <head>
     <meta charset="utf-8" type="text/html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,5 +15,6 @@
 
   <body id="app">
     <script type="module" src="/src/main.ts"></script>
+    <script src="/src/assets/js/index.ts"></script>
   </body>
 </html>
