--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ru" data-theme="light">
+<html lang="ru" data-theme="dark">
   <head>
     <meta charset="utf-8" type="text/html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
