--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 
   <body id="app">
     <script type="module" src="/src/main.ts"></script>
-    <script src="/src/assets/js/index.ts"></script>
+    <script src="/assets/js/index.js"></script>
   </body>
 </html>
