--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <title>deeppines</title>
-    <meta name="description" content="Soon..." />
+    <title>Кирдяшкин Егор - Frontend developer</title>
+    <meta name="description" content="Занимаюсь разработкой UI сайтов и не только." />
 
     <link rel="canonical" href="https://deeppines.github.io/" />
   </head>
