--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="ru" data-theme="dark">
-  <head>
-    <meta charset="utf-8" type="text/html" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+<head>
+  <meta charset="utf-8" type="text/html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Кирдяшкин Егор - Frontend developer</title>
-    <meta name="description" content="Занимаюсь разработкой UI сайтов и не только." />
+  <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <link rel="canonical" href="https://deeppines.github.io/" />
-  </head>
+  <title>Кирдяшкин Егор - Frontend developer</title>
+  <meta name="description" content="Занимаюсь разработкой UI сайтов и не только." />
 
-  <body id="app">
-    <script type="module" src="/src/main.ts"></script>
-    <script src="/assets/js/index.js"></script>
-  </body>
+  <link rel="canonical" href="https://deeppines.github.io/" />
+</head>
+
+<body id="app">
+  <script type="module" src="/src/main.ts"></script>
+  <script src="/assets/js/modules/theme/index.js"></script>
+  <script src="/assets/js/index.js"></script>
+</body>
+
 </html>
