--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <meta name="description" content="Занимаюсь разработкой UI сайтов и не только." />
 
     <link rel="canonical" href="https://deeppines.github.io/" />
+
+    <meta name="yandex-verification" content="4566276965fe0e00" />
+    <meta name="google-site-verification" content="Vp7xYEg1BC7TF1ZEtp-xtgjkRdniJ4BGxYmNB2ewcMI" />
   </head>
 
   <body id="app">
