--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body id="app">
     <script type="module" src="/src/main.ts"></script>
     <script src="/assets/js/modules/theme/index.js"></script>
+    <script src="/assets/js/modules/lang/index.js"></script>
     <script src="/assets/js/modules/modal/index.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
