feat: base snowflakes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="/assets/js/modules/theme/index.js"></script>
     <script src="/assets/js/modules/lang/index.js"></script>
     <script src="/assets/js/modules/modal/index.js"></script>
+    <script src="/assets/js/modules/snowflakes/index.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
