feat: connect hidden btn class

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="/assets/js/modules/lang/index.js"></script>
     <script src="/assets/js/modules/modal/index.js"></script>
     <script src="/assets/js/modules/snowflakes/index.js"></script>
+    <script src="/assets/js/modules/hiddenButton/index.js"></script>
     <script src="/assets/js/index.js"></script>
   </body>
 </html>
